Updated backend API URL

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,4 @@
 # REACT_APP_API_URL=https://chat-app-backend-6pmn.onrender.com
 REACT_APP_API_URL= http://localhost:3002
+REACT_APP_API_URL=https://invitelinkbackend.onrender.com
+FRONTEND_URL=https://invitelinkfrontend.vercel.app
